--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,34 @@ body {
   font-family: "roboto", sans-serif;
 }
 
+footer {
+  padding: 20px;
+  background-color: #353535;
+  margin-top: 50px;
+}
+footer h2 {
+  color: #ffffff;
+  font-family: "Shrikhand", cursive;
+  font-size: 1.3rem;
+  margin-bottom: 15px;
+}
+footer ul {
+  padding: 0;
+}
+footer ul li {
+  list-style-type: none;
+  margin-bottom: 10px;
+}
+footer ul li a {
+  color: #ffffff;
+}
+footer ul li .fas {
+  margin-right: 10px;
+}
+
 header {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -353,7 +380,18 @@ a {
 .restaurant-title {
   font-family: "Shrikhand", cursive;
   font-size: 1.6rem;
-  margin-left: 2%;
+  margin-left: 8%;
+}
+
+.restaurant-name {
+  background: #f6f6f6;
+  padding-top: 10px;
+  border-top-left-radius: 40px;
+  border-top-right-radius: 40px;
+  padding-bottom: 30px;
+  position: relative;
+  top: -45px;
+  margin-left: 0;
 }
 
 .restaurant-name .heart {
@@ -434,36 +472,6 @@ a {
   margin: 50px 130px 20px;
   background: linear-gradient(177deg, #ff79da 10%, #9256dc 90%);
   box-shadow: 3px 3px 10px #bfbfbf;
-}
-
-footer {
-  padding: 20px;
-  background-color: #353535;
-  margin-top: 50px;
-}
-
-footer h2 {
-  color: #ffffff;
-  font-family: "Shrikhand", cursive;
-  font-size: 1.3rem;
-  margin-bottom: 15px;
-}
-
-footer ul {
-  padding: 0;
-}
-
-footer ul li {
-  list-style-type: none;
-  margin-bottom: 10px;
-}
-
-footer ul li a {
-  color: #ffffff;
-}
-
-footer ul li .fas {
-  margin-right: 10px;
 }
 
 @media screen and (min-width: 577px) {
