--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 * {
   margin: 0;
+  padding: 0;
 }
 
 html {
@@ -211,6 +212,42 @@ header .logo-home {
     z-index: -1;
   }
 }
+@-webkit-keyframes checkslide {
+  0% {
+    transform: translateX(60px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+@keyframes checkslide {
+  0% {
+    transform: translateX(60px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+@-webkit-keyframes dishes {
+  from {
+    transform: scale(0);
+    opacity: 0;
+  }
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+@keyframes dishes {
+  from {
+    transform: scale(0);
+    opacity: 0;
+  }
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
 #functionning h2 {
   margin: 40px 20px 15px 30px;
 }
@@ -365,9 +402,7 @@ a {
 }
 
 #background-image {
-  width: 457px;
-  -o-object-fit: cover;
-  object-fit: cover;
+  width: 100%;
 }
 
 .menu-lanoteenchantee {
@@ -447,7 +482,7 @@ a {
 .choice-2,
 .choice-3,
 .choice-4 {
-  width: 95%;
+  width: 97%;
   height: 55px;
   cursor: pointer;
   background: #ffffff;
@@ -460,6 +495,102 @@ a {
   justify-content: space-between;
 }
 
+.choice-1 .price-check,
+.choice-2 .price-check,
+.choice-3 .price-check,
+.choice-4 .price-check {
+  display: flex;
+  align-self: center;
+  transform: translateX(50px);
+}
+
+.choice-1:hover .price-check,
+.choice-2:hover .price-check,
+.choice-3:hover .price-check,
+.choice-4:hover .price-check {
+  -webkit-animation: checkslide 0.35s ease-in-out forwards;
+  animation: checkslide 0.35s ease-in-out forwards;
+}
+
+.choice-1 .checkicon,
+.choice-2 .checkicon,
+.choice-3 .checkicon,
+.choice-4 .checkicon {
+  display: inline-block;
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.choice-1:hover .checkicon,
+.choice-2:hover .checkicon,
+.choice-3:hover .checkicon,
+.choice-4:hover .checkicon {
+  transform: rotate(2turn);
+  transition: 0.7s;
+}
+
+.choice-1 .checkbox,
+.choice-2 .checkbox,
+.choice-3 .checkbox,
+.choice-4 .checkbox {
+  align-self: center;
+  padding: 25px;
+  background-color: #99e2d0;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+
+.choice-1:hover .checkbox,
+.choice-2:hover .checkbox,
+.choice-3:hover .checkbox,
+.choice-4:hover .checkbox {
+  -webkit-animation: checkslide 0.35s ease-in-out forwards;
+  animation: checkslide 0.35s ease-in-out forwards;
+}
+
+.menu-content {
+  margin-left: 10px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.menu-content h3,
+.menu-content p {
+  font-size: 1rem;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.price {
+  font-size: 0.9rem;
+  font-weight: bold;
+  align-self: flex-end;
+  margin: 8px 20px;
+}
+
+.entree {
+  transform: scale(0);
+  -webkit-animation: dishes 2s ease-in-out forwards;
+  animation: dishes 2s ease-in-out forwards;
+}
+
+.dish {
+  transform: scale(0);
+  -webkit-animation: dishes 2s ease-in-out 0.4s forwards;
+  animation: dishes 2s ease-in-out 0.4s forwards;
+}
+
+.dessert {
+  transform: scale(0);
+  -webkit-animation: dishes 2s ease-in-out 0.8s forwards;
+  animation: dishes 2s ease-in-out 0.8s forwards;
+}
+
 #button-commander {
   cursor: pointer;
   opacity: 1;
@@ -469,7 +600,7 @@ a {
   color: #ffffff;
   font-weight: bold;
   font-size: 1rem;
-  margin: 50px 130px 20px;
+  margin: 50px 150px 20px;
   background: linear-gradient(177deg, #ff79da 10%, #9256dc 90%);
   box-shadow: 3px 3px 10px #bfbfbf;
 }
