--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 * {
   margin: 0;
-  padding: 0;
 }
 
 html {
@@ -11,6 +10,15 @@ html {
 
 body {
   font-family: "roboto", sans-serif;
+}
+
+header {
+  display: flex;
+}
+header .logo-home {
+  width: 64vmin;
+  margin: auto;
+  padding: 18px;
 }
 
 footer {
@@ -36,18 +44,6 @@ footer ul li a {
 }
 footer ul li .fas {
   margin-right: 10px;
-}
-
-header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-header .logo-home {
-  width: 64%;
-  margin: auto;
-  padding: 18px;
 }
 
 #search {
@@ -403,12 +399,14 @@ a {
 
 #background-image {
   width: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
 }
 
 .menu-lanoteenchantee {
   -o-object-fit: cover;
   object-fit: cover;
-  width: 450px;
+  width: 100%;
   height: 220px;
 }
 
@@ -501,7 +499,7 @@ a {
 .choice-4 .price-check {
   display: flex;
   align-self: center;
-  transform: translateX(50px);
+  transform: translateX(70px);
 }
 
 .choice-1:hover .price-check,
@@ -558,7 +556,7 @@ a {
 
 .menu-content h3,
 .menu-content p {
-  font-size: 1rem;
+  font-size: 0.9rem;
   margin-bottom: 5px;
   margin-top: 5px;
   white-space: nowrap;
@@ -570,7 +568,7 @@ a {
   font-size: 0.9rem;
   font-weight: bold;
   align-self: flex-end;
-  margin: 8px 20px;
+  margin: 15px;
 }
 
 .entree {
@@ -603,6 +601,13 @@ a {
   margin: 50px 150px 20px;
   background: linear-gradient(177deg, #ff79da 10%, #9256dc 90%);
   box-shadow: 3px 3px 10px #bfbfbf;
+}
+
+#button-commander:hover {
+  opacity: 0.65;
+  transition: 0.3s;
+  box-shadow: 3px 3px 10px #0d0d0d;
+  transition: 0.3s;
 }
 
 @media screen and (min-width: 577px) {
