--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,18 +1,9 @@
 @import "./utils/_variables";
 @import "./base/_base";
+@import "./layout/header\ ";
 @import "./layout/footer\ "; 
   
-header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
 
-header .logo-home {
-  width: 64%;
-  margin: auto;
-  padding: 18px;
-}
   #search {
   text-align: center;
   background-color: #f6f6f6;
@@ -337,10 +328,6 @@ a{
   -o-object-fit: cover;
   object-fit: cover;
 }
-
-
-
-
 .new {
   color: #2c9c81;
   background-color: #99e2d0;
@@ -363,13 +350,14 @@ a{
 }
 #background-image{
   width: 100%; 
-  
+  -o-object-fit: cover;
+  object-fit: cover;
    
 }
 .menu-lanoteenchantee {
   -o-object-fit: cover;
   object-fit: cover;
-  width: 450px;
+  width: 100%;
   height: 220px;
 }
 
@@ -460,7 +448,7 @@ a{
 .choice-4 .price-check {
   display: flex;
   align-self: center;
-  transform: translateX(50px);
+  transform: translateX(70px);
 }
 .choice-1:hover .price-check,
 .choice-2:hover .price-check,
@@ -510,7 +498,7 @@ a{
 }
 .menu-content h3,
  .menu-content p {
-  font-size: 1rem;
+  font-size: 0.9rem;
   margin-bottom: 5px;
   margin-top: 5px;
   white-space: nowrap;
@@ -521,7 +509,7 @@ a{
   font-size: 0.9rem;
   font-weight: bold;
   align-self: flex-end;
-  margin: 8px 20px;
+  margin:  15px;
 }
 
 .entree {
@@ -542,15 +530,6 @@ a{
   animation: dishes 2s ease-in-out 0.8s forwards;
 }
 
-
-
- 
-
-
-
-
-
-
 #button-commander{  
   cursor: pointer;
   opacity: 1;
@@ -563,6 +542,12 @@ a{
   margin: 50px 150px 20px;
   background: linear-gradient(177deg, #ff79da 10%, #9256dc 90%);
   box-shadow: 3px 3px 10px #bfbfbf;
+}
+#button-commander:hover{
+opacity: 0.65;
+transition: 0.3s;
+box-shadow: 3px 3px 10px #0d0d0d ;
+transition: 0.3s;
 }
 
 
