--- a/css/style.css
+++ b/css/style.css
@@ -595,7 +595,7 @@ a {
   padding: 16px 20px;
   color: #ffffff;
   font-weight: bold;
-  margin-left: 35%;
+  margin-left: 36%;
   margin-top: 10%;
   font-size: 1rem;
   background: linear-gradient(177deg, #ff79da 10%, #9256dc 90%);
@@ -636,6 +636,10 @@ a {
     width: 42%;
     height: 30vw;
     margin: 10px 15px;
+  }
+
+  #button-commander {
+    margin-left: 41%;
   }
 
   footer {
@@ -686,6 +690,10 @@ a {
     -o-transition: 0.4s;
     transition: 0.4s;
   }
+
+  #button-commander {
+    margin-left: 43%;
+  }
 }
 @media screen and (min-width: 1440px) {
   #search form .searchfield {
@@ -718,6 +726,11 @@ a {
   .restaurants .box-restaurant {
     height: 20vw;
     width: 47%;
+  }
+
+  #button-commander {
+    margin-left: 44.5%;
+    font-size: 1.2rem;
   }
 }
 
