--- a/css/style.css
+++ b/css/style.css
@@ -111,15 +111,22 @@ header {
   display: flex;
 }
 header .logo-home {
-  height: 55px;
-  width: 100%;
+  height: 90px;
+  width: 90%;
+  max-width: 1440px;
   position: relative;
-  display: inline-flex;
+  display: flex;
   justify-content: center;
   align-items: center;
   font-size: 1.6em;
   margin: auto;
+  padding-top: 10px;
   font-family: "Shrikhand", cursive;
+}
+header .arrow {
+  font-size: 1.4rem;
+  margin-top: 30px;
+  margin-left: 0;
 }
 
 #search {
@@ -163,6 +170,7 @@ header .logo-home {
   font-weight: normal;
   text-transform: initial;
   font-family: "roboto", sans-serif;
+  color: grey;
 }
 
 .search-button {
@@ -225,7 +233,7 @@ header .logo-home {
   top: 29%;
 }
 
-#functionning ul li:hover {
+#functionning ul li :hover {
   background-color: #f5edff;
   transition: 0.3s;
 }
@@ -328,13 +336,6 @@ a {
   padding: 6.5px 9.5px;
   font-size: 15px;
   border-radius: 2px;
-}
-
-.arrow {
-  font-size: 1.5rem;
-  margin-top: 30px;
-  margin-left: 20px;
-  color: #0d0d0d;
 }
 
 #background-image {
