--- a/sass/layout/_body.scss
+++ b/sass/layout/_body.scss
@@ -34,9 +34,9 @@
   }
   #search .search-subtitle {
     font-size: 1.2em;
-    font-weight: normal;
+    font-weight:normal;
     text-transform: initial;
-    font-family: "roboto",sans-serif;
+    font-family: "roboto",100;
     color:grey;
 
   }
@@ -57,7 +57,7 @@
   .search-button:hover {
     opacity: 0.85;
     transition: 0.3s;
-    box-shadow: 3px 3px 10px black ;
+    box-shadow: 3px 3px 10px #0d0d0d ;
     transition: 0.3s;
   }
   
@@ -186,11 +186,11 @@
     -o-object-fit: cover;
     object-fit: cover;
   }
-  .new {
+  .box-restaurant .new {
     
     background-color: #99e2d0;
-    color: green;
-    width: fit-content;
+    color: #2c9c81;
+    width: max-content;
     position: absolute;
     top: 0.5em;
     right: 1em;
@@ -198,6 +198,7 @@
     font-size: 15px;
     border-radius: 2px;
   }
+  
   
   
   #background-image{
@@ -379,10 +380,12 @@
     opacity: 1;
     border: none;
     border-radius: 25px;
-    padding: 16px 20px;
-    color: #ffffff;
+    justify-content: center;
+    
+    padding: 16px 50px;
+    color: $color-light;
     font-weight: bold;
-    margin-left: 35%;
+    margin-left: 23%;
     margin-top: 10%;
     font-size: 1rem;
     background: linear-gradient(177deg, #ff79da 10%, #9256dc 90%);
@@ -392,7 +395,7 @@
   #button-commander:hover {
     opacity: 0.95;
     transition: 0.3s;
-    box-shadow: 3px 3px 10px black ;
+    box-shadow: 3px 3px 10px #0d0d0d ;
     transition: 0.3s;
     
   }
