--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,7 @@ header .arrow {
   font-size: 1.4rem;
   margin-top: 30px;
   margin-left: 0;
+  color: #0d0d0d;
 }
 
 #search {
@@ -169,7 +170,7 @@ header .arrow {
   font-size: 1.2em;
   font-weight: normal;
   text-transform: initial;
-  font-family: "roboto", sans-serif;
+  font-family: "roboto", 100;
   color: grey;
 }
 
@@ -190,7 +191,7 @@ header .arrow {
 .search-button:hover {
   opacity: 0.85;
   transition: 0.3s;
-  box-shadow: 3px 3px 10px black;
+  box-shadow: 3px 3px 10px #0d0d0d;
   transition: 0.3s;
 }
 
@@ -326,10 +327,10 @@ a {
   object-fit: cover;
 }
 
-.new {
+.box-restaurant .new {
   background-color: #99e2d0;
-  color: green;
-  width: fit-content;
+  color: #2c9c81;
+  width: max-content;
   position: absolute;
   top: 0.5em;
   right: 1em;
@@ -525,10 +526,11 @@ a {
   opacity: 1;
   border: none;
   border-radius: 25px;
-  padding: 16px 20px;
+  justify-content: center;
+  padding: 16px 50px;
   color: #ffffff;
   font-weight: bold;
-  margin-left: 35%;
+  margin-left: 23%;
   margin-top: 10%;
   font-size: 1rem;
   background: linear-gradient(177deg, #ff79da 10%, #9256dc 90%);
@@ -538,7 +540,7 @@ a {
 #button-commander:hover {
   opacity: 0.95;
   transition: 0.3s;
-  box-shadow: 3px 3px 10px black;
+  box-shadow: 3px 3px 10px #0d0d0d;
   transition: 0.3s;
 }
 
