--- a/css/style.css
+++ b/css/style.css
@@ -609,7 +609,7 @@ footer ul li .fas {
   }
 
   #button-commander {
-    margin-left: 41%;
+    margin-left: 37%;
   }
 
   footer {
@@ -672,7 +672,7 @@ footer ul li .fas {
   }
 
   #button-commander {
-    margin-left: 44%;
+    margin-left: 41%;
     margin-top: 3%;
   }
 
@@ -731,8 +731,8 @@ footer ul li .fas {
   }
 
   #button-commander {
-    margin-left: 44.7%;
-    font-size: 1.1rem;
+    margin-left: 43%;
+    font-size: 1.2em;
   }
 }
 @media screen and (min-width: 2560px) {
